Revert "Fix gravatar being too big"
This reverts commit f9be78ba8e1f7a38fb4ab0cd2229e2231de90c86.

--- a/packages/typescriptlang-org/src/templates/documentation.scss
+++ b/packages/typescriptlang-org/src/templates/documentation.scss
@@ -359,8 +359,6 @@
     top: 0;
     left: 0;
     border-radius: 16px;
-    width: 32px;
-    height: 32px;
   }
 }
 
